<resources>
    <string name="date">22 Oct 2015</string>
    <string name="website">https://en.wikipedia.org/wiki/Film</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="fa_admin">&#xf0c0;</string>
    <string name="fa_profile">&#xf007;</string>
    <string name="fa_notification">&#xf0f3;</string>
    <string name="fa_setting">&#xf013;</string>
    <string name="fa_upload">&#xf093;</string>
    <string name="fa_download">&#xf019;</string>
    <string name="fa_logout">&#xf08b;</string>
    <string name="fa_chevron_right">&#xf054;</string>
    <string name="fa_chevron_down">&#xf078;</string>
    <string name="fa_home">&#xf015;</string>
    <string name="fa_information">&#xf05a;</string>
    <string name="fa_login">&#xf090;</string>
    <string name="fa_envelope">&#xf0e0;</string>
    <string name="fa_name">&#xf007;</string>
    <string name="fa_address">&#xf015;</string>
    <string name="fa_email">&#xf0e0;</string>
    <string name="fa_website">&#xf0ac;</string>
    <string name="fa_phone">&#xf098;</string>
    <string name="fa_plus">&#xf067;</string>
    <string name="fa_minus">&#xf068;</string>
    <string name="fa_angle_up">&#xf106;</string>
    <string name="fa_angle_up_v1">&#xf0de;</string>
    <string name="fa_angle_down">&#xf107;</string>
    <string name="fa_angle_down_v1">&#xf0dd;</string>
    <string name="fa_ellipsis_h">&#xf141;</string>
    <string name="fa_ellipsis_v">&#xf142;</string>
    <string name="fa_exclamation_triangle">&#xf071;</string>
    <string name="fa_filter">&#xf0b0;</string>
    <string name="fa_calendar">&#xf073;</string>
    <string name="fa_join">&#xf0c0;</string>
    <string name="fa_create">&#xf0fe;</string>
    <string name="fa_read">&#xf02d;</string>
    <string name="fa_update">&#xf044;</string>
    <string name="fa_delete">&#xf1f8;</string>
    <string name="fa_sync">&#xf021;</string>
    <string name="fa_save">&#xf0c7;</string>
    <string name="fa_actions">&#xf022;</string>
    <string name="fa_details">&#xf1e5;</string>
    <string name="fa_groups">&#xf0c0;</string>
    <string name="fa_statuses">&#xf201;</string>
    <string name="fa_perms">&#xf085;</string>
    <string name="fa_com_attr">&#xf057;</string>
    <string name="fa_clock">&#xf017;</string>
    <string name="fa_angle_right">&#xf105;</string>
    <string name="Create">Create</string>
    <string name="Add">Add</string>
    <string name="Read">Read</string>
    <string name="Update">Update</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="Sync">Sync</string>
    <string name="Save">Save</string>
    <string name="Change">Change</string>
    <string name="Cancel">Cancel</string>
    <string name="Reset">Reset</string>
    <string name="Apply">Apply</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Ok">Ok</string>
    <string name="Owner">Owner</string>
    <string name="Group">Group</string>
    <string name="Other">Other</string>
    <string name="createdOn">created on:</string>
    <string name="modifiedOn">modified on:</string>
    <string name="syncedOn">synced on:</string>
    <string name="individualOwner">individual owner:</string>
    <string name="organizationOwner">organization owner:</string>
    <string name="logframe_list_title">Logical Frameworks</string>
    <string name="logframe_create_title">ADD LOGFRAME</string>
    <string name="logframe_update_title">UPDATE LOGFRAME</string>
    <string name="logframe_delete_title">DELETE LOGFRAME</string>
    <string name="logframe_organization_caption">organization</string>
    <string name="logframe_name_caption">logical framework</string>
    <string name="logframe_description_caption">description</string>
    <string name="logframe_startdate_caption">start date: </string>
    <string name="logframe_enddate_caption">end date: </string>
    <string name="address_list_title">Addresses</string>
    <string name="address_hint_street">Street</string>
    <string name="address_hint_city">City</string>
    <string name="address_hint_province">Province</string>
    <string name="address_hint_postal_code">Postal Code</string>
    <string name="address_hint_country">Country</string>
    <string name="user_list_title">Users</string>
    <string name="user_profile">Profile : </string>
    <string name="user_hint_organization">Organization</string>
    <string name="user_hint_firstname">First Name</string>
    <string name="user_hint_lastname">Last Name</string>
    <string name="user_hint_gender">I am</string>
    <string name="user_male">Male</string>
    <string name="user_female">Female</string>
    <string name="user_hint_designation">Job Title</string>
    <string name="user_address">Address : </string>
    <string name="user_hint_address">Address</string>
    <string name="user_hint_email">Email</string>
    <string name="user_hint_website">Website</string>
    <string name="user_hint_phone">Phone</string>
    <string name="user_hint_password">Password</string>
    <string name="user_hint_confirm_password">Confirm Password</string>
    <string name="text_save">Save</string>
    <string name="text_change">Change</string>
    <string name="text_cancel">Cancel</string>
    <string name="role_list_title">Roles</string>
    <string name="role_hint_owner">Owner :</string>
    <string name="role_hint_group">Group :</string>
    <string name="role_hint_permission">Permission :</string>
    <string name="entity_list_title">Roles</string>
    <string name="entity_hint_owner">Owner :</string>
    <string name="entity_hint_group">Group :</string>
    <string name="entity_hint_permission">Permission :</string>
    <string name="permission_list_title">Permissions</string>
    <string name="privilege_list_title">Privileges</string>
    <string name="privilege_add_title">Add Privilege</string>
    <string name="privilege_add_question">Are you sure you want to CREATE privilege </string>
    <string name="privilege_add_success">The privilege successfully created </string>
    <string name="privilege_add_error">Error occurred while creating a new privilege. </string>
    <string name="privilege_read_title">Read Privilege</string>
    <string name="privilege_read_question">Are you sure you want to READ privilege </string>
    <string name="privilege_read_success">The privilege successfully read </string>
    <string name="privilege_read_error">Error occurred while reading a new privilege. </string>
    <string name="privilege_edit_title">Edit Privilege</string>
    <string name="privilege_edit_question">Are you sure you want to UPDATE privilege </string>
    <string name="privilege_edit_success">The privilege has been successfully updated. </string>
    <string name="privilege_edit_error">Error occurred while updating a privilege. </string>
    <string name="privilege_del_title">Delete Privilege</string>
    <string name="privilege_del_question">Are you sure you want to DELETE privilege </string>
    <string name="privilege_del_success">The privilege successfully deleted </string>
    <string name="privilege_del_error">Error occurred while deleting a privilege. </string>
    <string name="privilege_sync_title">Sync Privilege</string>
    <string name="privilege_sync_question">Do you want to SYNCHRONIZE privilege </string>
    <string name="privilege_sync_success">The privilege successfully synchronized </string>
    <string name="privilege_sync_error">Error occurred while synchronizing a privilege. </string>
    <string name="privilege_change_title">Change Privilege</string>
    <string name="privilege_change_question">Do you want to CHANGE privilege </string>
    <string name="privilege_change_success">The privilege has been successfully changed </string>
    <string name="privilege_change_error">Error occurred while changing a privilege. </string>
    <string name="privilege_filter_add_title">Filter Entities to Add.</string>
    <string name="privilege_filter_remove_title">Filter Entities to Remove.</string>
    <string name="privilege_filter_error">Filtering Error.</string>
    <string name="privilege_filter_error_msg">Error in filtering entities…</string>
    <string name="organization_list_title">Organizations</string>
    <string name="organization_caption">organization:</string>
    <string name="impact_list_title">List of Impacts</string>
    <string name="impact_caption">impact</string>
    <string name="outcome_list_title">List of Outcomes</string>
    <string name="outcome_caption">outcome</string>
    <string name="output_list_title">List of Outputs</string>
    <string name="output_caption">output</string>
    <string name="activity_list_title">List of Activities</string>
    <string name="activity_caption">activity</string>
    <string name="input_list_title">Inputs</string>
    <string name="input_caption">input</string>
    <string name="input_number_caption">number required:</string>
    <string name="input_expense_caption">budgeted for:</string>
    <string name="input_income_caption">fund:</string>
    <string name="indicator_list_title">Indicators</string>
    <string name="mov_list_title">MoVs</string>
    <string name="risk_list_title">Risks</string>
    <string name="risk_caption">activity:</string>
    <string name="workplan_list_title">Work plans</string>
    <string name="budget_list_title">Budgets</string>
    <string name="resource_list_title">Resources</string>
    <string name="evaluation_list_title">Evaluations</string>
    <string name="criterion_list_title">Criteria</string>
    <string name="question_list_title">List of Questions</string>
    <string name="question_label">Identifier : </string>
    <string name="question_caption">Question : </string>
    <string name="question_type">Type : </string>
    <string name="question_description">Description : </string>
    <string name="question_group">Group : </string>
    <string name="question_group_description">Group Desc.: </string>
    <string name="question_valid_startdate">valid from </string>
    <string name="question_to_enddate"> to </string>
    <string name="category_list_title">Categories</string>
    <string name="evaluating_list_title">Evaluating</string>
    <string name="monitoring_list_title">Monitoring</string>
    <string name="report_list_title">Reports</string>
    <string name="alert_list_title">Alerts</string>
    <string name="triangle_list_title">CES Triangle</string>
    <string name="text_inside_circle_button_text_normal">Text Inside Circle Button(Normal)</string>
    <string name="text_outside_circle_button_text_normal">Text Outside Circle Button(Normal)</string>
    <string name="text_ham_button_text_normal">Ham Button Text(Normal)</string>
    <string name="text_ham_button_sub_text_normal">Ham Button Sub Text(Normal)</string>
    <string name="custom_npi_text_template">#i/#N"</string>
    <string name="custom_npi_text_template_2">#i of #N"</string>
    <string name="custom_npi_previous_button_text">Prev.</string>
    <string name="custom_npi_next_button_text">\>></string>
    <string name="custom_npi_start_button_text">First</string>
    <string name="custom_npi_end_button_text">\>|</string>
    <string name="custom_npi_previous_button_text_2">More</string>
    <string name="custom_npi_next_button_text_2">Less</string>
    <string name="custom_npi_start_button_text_2">1st</string>
    <string name="custom_npi_end_button_text_2">Nth</string>
    <string name="unkown">unknown</string>
    <string name="description_caption">description</string>
    <string name="startdate_caption">start date: </string>
    <string name="enddate_caption">end date: </string>
    <string name="hello">Choose one of the features below.</string>
    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
</resources>