<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/project_list_fragment_id"
    android:weightSum="1">

    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/home_icon"
            android:onClick="onClickHome" />

        <ImageView style="@style/TitleBarSeparator" />

        <TextView style="@style/TitleBarText"
            android:text="Programmes/Projects"/>

        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:src="@drawable/title_about"
            android:onClick="onClickAbout" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/me_search_item"
            android:onClick="onClickSearch" />
    </LinearLayout>

    <ListView
        android:id="@+id/project_list_view_id"
        android:layout_width="match_parent"
        android:layout_height="319dp"
        android:layout_weight="0.78"
        android:focusable="true"
        android:choiceMode="singleChoice"
        android:listSelector="#666666">
        <requestFocus/>
    </ListView>

    <LinearLayout
        android:id="@+id/layout_submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/project_description_id"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:weightSum="3" >

        <Button
            android:id="@+id/button_add_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Add" />

        <Button
            android:id="@+id/button_edit_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Edit" />

        <Button
            android:id="@+id/button_delete_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Delete" />
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@android:drawable/ic_dialog_email" />
</LinearLayout>