<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        card_view:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayoutHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/child_header_colour"
                android:gravity="top"
                android:orientation="horizontal"
                android:elevation="4dp"
                app:layout_constraintBottom_toTopOf="@+id/textViewDescriptionCaption"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <!--androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewOrganizationCaption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:text="@string/logframe_organization_caption"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_small"
                        android:textStyle="bold" /-->

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewName"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="1dp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <!--androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewNameCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/logframe_name_caption"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/textViewName"
                app:layout_constraintTop_toBottomOf="@id/linearLayoutHeader" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="2dp"
                android:layout_marginTop="1dp"
                android:padding="2dp"
                android:textSize="@dimen/text_size_small_medium"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/textViewDescriptionCaption"
                app:layout_constraintTop_toBottomOf="@+id/textViewNameCaption" /-->

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewDescriptionCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/logframe_description_caption"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/textViewDescription"
                app:layout_constraintTop_toBottomOf="@id/linearLayoutHeader" />

            <!-- parent logframe description -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="9dp"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:textSize="@dimen/text_size_small_medium"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/textViewStartDateCaption"
                app:layout_constraintTop_toBottomOf="@id/textViewDescriptionCaption"  />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewStartDateCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="1dp"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/logframe_startdate_caption"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/bmbMenu"
                app:layout_constraintTop_toBottomOf="@id/textViewDescription" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="12dp"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="value"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@id/bmbMenu"
                app:layout_constraintStart_toEndOf="@+id/textViewStartDateCaption"
                app:layout_constraintTop_toBottomOf="@id/textViewDescription" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewEndDateCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/logframe_enddate_caption"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/bmbMenu"
                app:layout_constraintTop_toBottomOf="@id/textViewDescription"
                app:layout_constraintEnd_toStartOf="@+id/textViewEndDate" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="4dp"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:textSize="@dimen/text_size_small"
                android:text="value"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@id/bmbMenu"
                app:layout_constraintTop_toBottomOf="@id/textViewDescription"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- bmb menu a logframe -->
            <com.me.mseotsanyana.bmblibrary.cBoomMenuButton
                android:id="@+id/bmbMenu"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="4dp"
                app:bmb_buttonEnum="textOutsideCircle"
                app:bmb_buttonPlaceEnum="buttonPlace_sc_5_3"
                app:bmb_inList="true"
                app:bmb_piecePlaceEnum="piecePlace_dot_5_3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewStartDate" />

            <!-- synchronise a logframe -->
            <TextView
                android:id="@+id/textViewSyncIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/me_btn_flexible"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/bmbMenu"
                app:layout_constraintTop_toBottomOf="@id/textViewStartDate" />

            <!-- delete a logframe -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewDeleteIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/me_btn_flexible"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textViewSyncIcon"
                app:layout_constraintTop_toBottomOf="@id/textViewStartDate" />

            <!-- update a logframe -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewUpdateIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/me_btn_flexible"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textViewDeleteIcon"
                app:layout_constraintTop_toBottomOf="@id/textViewStartDate" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>